# context

./: .gitignore  CMakeLists.txt
Bullet/: linux_checkout_from_svn
Bullet/nbproject/: Makefile-impl.mk  Makefile-linuxDebug.mk  Makefile-linuxRelease.mk  Makefile-variables.mk  Makefile-win32Debug.mk  Makefile-win32Release.mk  Package-linuxDebug.bash  Package-linuxRelease.bash  Package-win32Debug.bash  Package-win32Release.bash  configurations.xml  project.xml
Common/: BoundingVolume.cpp  BoundingVolume.h  CMakeLists.txt  Camera.cpp  Camera.h  Camera2d.cpp  Camera2d.h  Common.cpp  Common.h  DefaultShader.cpp  DefaultShader.h  FileLoader.cpp  FileLoader.h  Matrix4x4.cpp  Matrix4x4.h  MemoryGuard.h  ModelviewMatrix.h  Plane.cpp  Plane.h  ProjectionMatrix.cpp  ProjectionMatrix.h  Quaternion.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  Tokenizer.cpp  Tokenizer.h  glad.c  glad.h  stb_truetype.cpp  stb_truetype.h  uiFont.cpp  uiFont.h
Common/nbproject/: Makefile-impl.mk  Makefile-linuxDebug.mk  Makefile-linuxRelease.mk  Makefile-variables.mk  Makefile-win32Debug.mk  Makefile-win32Release.mk  Package-linuxDebug.bash  Package-linuxRelease.bash  Package-win32Debug.bash  Package-win32Release.bash  configurations.xml  project.xml
Common/nbproject/private/: Makefile-variables.mk  configurations.xml  private.xml
Context/: CMakeLists.txt  Camera.h  DefaultShader.cpp  GameTime.h  GlContext.cpp  GlContext.h  KeyboardState.cpp  KeyboardState.hpp  Matrix4x4.cpp  Matrix4x4.h  ModelviewMatrix.cpp  ModelviewMatrix.h  MouseState.cpp  MouseState.hpp  ProjectionMatrix.cpp  Quaternion.cpp  Quaternion.h  Shader.cpp  Shader.h  UserInput.cpp  UserInput.h  Vector3.cpp  Vector3.h
Context/nbproject/: Makefile-impl.mk  Makefile-linuxDebug.mk  Makefile-linuxRelease.mk  Makefile-variables.mk  Makefile-win32Debug.mk  Makefile-win32Release.mk  Package-linuxDebug.bash  Package-linuxRelease.bash  Package-win32Debug.bash  Package-win32Release.bash  configurations.xml  project.xml
Context/nbproject/private/: configurations.xml  private.xml
ContextTest/: CMakeLists.txt  ContextTest.cpp  ContextTest.h  main.cpp
ContextTest/nbproject/: Makefile-impl.mk  Makefile-linuxDebug.mk  Makefile-linuxRelease.mk  Makefile-variables.mk  Makefile-win32Debug.mk  Makefile-win32Release.mk  Package-linuxDebug.bash  Package-linuxRelease.bash  Package-win32Debug.bash  Package-win32Release.bash  configurations.xml  project.xml
ContextTest/nbproject/private/: configurations.xml
FileSystem/: CMakeLists.txt  DirectoryPackage.cpp  DirectoryPackage.h  File.cpp  File.h  FileFromDirectory.cpp  FileFromDirectory.h  FileFromMemory.cpp  FileFromMemory.h  FilePath.cpp  FilePath.h  FileSystem.cpp  FileSystem.h  Item.cpp  Item.h  Package.cpp  Package.h  PackageFromDirectory.cpp  PackageFromDirectory.h  PackageFromPak.cpp  PackageFromPak.h  PackageFromWad.cpp  PackageFromWad.h
FileSystem/nbproject/: Makefile-impl.mk  Makefile-linuxDebug.mk  Makefile-linuxRelease.mk  Makefile-variables.mk  Makefile-win32Debug.mk  Makefile-win32Release.mk  Package-linuxDebug.bash  Package-linuxRelease.bash  Package-win32Debug.bash  Package-win32Release.bash  configurations.xml  project.xml
Geometry/: Brush.cpp  Brush.h  CMakeLists.txt  Entity.cpp  Entity.h  MapLoader.cpp  MapLoader.h  Scene.cpp  Scene.h
Geometry/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  project.xml  (+12 more)
GoldSource/: CMakeLists.txt  DefaultStaticManager.cpp  DefaultStaticManager.h  Hl1BspData.cpp  Hl1BspData.h  Hl1BspLoader.cpp  Hl1BspLoader.h  Hl1SprData.cpp  Hl1SprData.h  IStaticManager.h  hl1types.h  lightmap.cpp  lightmap.h
GoldSource/nbproject/: Makefile-impl.mk  Makefile-linuxDebug.mk  Makefile-linuxRelease.mk  Makefile-variables.mk  Package-linuxDebug.bash  Package-linuxRelease.bash  configurations.xml  project.xml
cmake/: Conan.cmake  Dependencies.cmake
(+3 files in other folders)
